页面优化 资料表单替换

--- a/test.html
+++ b/test.html
@@ -2,48 +2,43 @@
 <html lang="zh-cn">
 
 <head>
-    <title>origin</title>
+    <title>联系方式</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#f4645f">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/demo.css" />
+    <link rel="stylesheet" type="text/css" href="css/component.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="css/pages.css">
     <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js">
-    </script>
-    <script>
-        $(document).ready(function () {
-            $("#myNav").affix({
-                offset: {
-                    top: 193
-                }
-            });
-        });
-    </script>
+    <script src="js/bootstrap.min.js"></script>
 </head>
 
-<body data-spy="scroll" data-target="#myScrollspy" class="body">
-   <nav class=" navbar navbar-default navbar-fixed-top" role="navigation">
+<body class="body">
+     <nav class=" navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" > <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
                 <a class="nav-brand" href="index.html"><img style="width: 40px;height: 40px;" src="img/logo.jpg" /></a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav" role="tablist">
                     <li role="presentation" class="hidden-sm"> <a href="index.html">首页</a> </li>
                     <li role="presentation"> <a href="recommend.html">游戏佳作推荐</a> </li>
-                    <li role="presentation" class="dropdown" class="active"> <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                            游戏分发平台 <span class="caret"></span>
-                        </a>
+                    <li role="presentation" class="dropdown" > <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+							游戏分发平台 <span class="caret"></span>
+						</a>
                         <ul class="dropdown-menu" role="menu">
                             <li role="presentation"> <a href="origin.html">Origin</a> </li>
                             <li role="presentation"> <a href="steam.html">Steam</a> </li>
                             <li role="presentation"> <a href="uplay.html">UPlay</a> </li>
                         </ul>
                     </li>
-                    <li role="presentation"> <a href="personalinformation.html">添加我为好友</a> </li>
+                    <li role="presentation" class=" active" > <a href="personalinformation.html">添加我为好友</a> </li>
                 </ul>
                 <form class="navbar-form navbar-right " role="search" action="http://store.steampowered.com/search/">
                     <div class="input-group">
@@ -56,25 +51,116 @@
             </div>
         </div>
     </nav>
-    <header class="header">
-        <div>
-            <h1>Uplay</h1>
-            <p>育碧旗下游戏平台，提供自家游戏的购买和下载。</p>
+    <div style="padding-top: 100px;" class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content" >
+                <iframe  id="goldendata_form_ndgR4r" src="https://jinshuju.net/f/ndgR4r?background=white&banner=show&embedded=true" width="100%" frameborder=0 allowTransparency="true" height="550" scrolling="no">你的浏览器不支持iframe</iframe>
+            </div>
         </div>
-    </header>
-    <article class="row">
-        <nav class="col-md-2 hidden-xs hidden-sm" id="myScrollspy" role="navigation">
-            <ul class="nav nav-tabs nav-stacked" id="myNav">
-                <li class="active"><a href="#section-1"><span class="glyphicon glyphicon-home">&nbsp;</span>Uplay</a></li>
-                <li><a href="#section-2"><span class="glyphicon glyphicon-tags">&nbsp;</span>平台特点</a></li>
-                <li><a href="#section-3"><span class="glyphicon glyphicon-shopping-cart">&nbsp;</span>客户端</a></li>
-                <li><a href="#section-4"><span class="glyphicon glyphicon-font">&nbsp;</span>反响及评价</a></li>
-                <li><a href="#section-5"><span class="glyphicon glyphicon-user">&nbsp;</span>个人评价</a></li>
-                <li><a href="#"><span class="glyphicon glyphicon-chevron-up">&nbsp;</span>返回顶端</a></li>
-            </ul>
-        </nav>
-
-
+    </div>
+    <div class="demo-1" style="width: 100%;height: 100%;padding: 0px;">
+            <div class="information panel panel-default container hidden-sm hidden-xs" style="background-color: rgba(255,255,255,0.3);">
+                <!-- chrome中中文字体显示不是微软雅黑（bug？），ie和eage中背景明显卡顿 -->
+                <div class="panel-heading" style="opacity: 0.5;"> <strong>个人资料：</strong> </div>
+                <div class="panel-body"> 正所谓独乐乐不如众乐乐
+                    <br /> 留下自己的联系方式
+                    <br /> 欢迎有兴趣的朋友来一起探索游戏的世界！
+                    <br /> Steam id：<a href="http://steamcommunity.com/id/chushao/">http://steamcommunity.com/id/chushao/</a> WeChat：Q751590330
+                    <br /> </div>
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"> 留下联系方式 </button>
+            </div>
+            <div class="informationxs panel panel-default container  hidden-lg hidden-md hidden-sm " style="background-color: rgba(255,255,255,0.3);">
+                <!-- chrome中中文字体显示不是微软雅黑（bug？），ie和eage中背景明显卡顿 -->
+                <div class="panel-heading" style="opacity: 0.5;"> <strong>个人资料：</strong> </div>
+                <div class="panel-body"> 正所谓独乐乐不如众乐乐
+                    <br /> 留下自己的联系方式
+                    <br /> 欢迎有兴趣的朋友来一起探索游戏的世界！
+                    <br /> Steam id：<a href="http://steamcommunity.com/id/chushao/">http://steamcommunity.com/id/chushao/</a> WeChat：Q751590330
+                    <br /> </div>
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"> 留下联系方式 </button>
+            </div>
+            <div class="informationsm panel panel-default container  hidden-lg hidden-md hidden-xs" style="background-color: rgba(255,255,255,0.3);">
+                <!-- chrome中中文字体显示不是微软雅黑（bug？），ie和eage中背景明显卡顿 -->
+                <div class="panel-heading" style="opacity: 0.5;"> <strong>个人资料：</strong> </div>
+                <div class="panel-body"> 正所谓独乐乐不如众乐乐
+                    <br /> 留下自己的联系方式
+                    <br /> 欢迎有兴趣的朋友来一起探索游戏的世界！
+                    <br /> Steam id：<a href="http://steamcommunity.com/id/chushao/">http://steamcommunity.com/id/chushao/</a> WeChat：Q751590330
+                    <br /> </div>
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"> 留下联系方式 </button>
+            </div>
+        <div class="content">
+            <div id="large-header" class="large-header">
+                <div style="position:absolute;right:100px; top:300px;" class="time" id="time" data-hours="" data-minutes="">
+                    <div class="digit">
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                    </div>
+                    <div class="digit">
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                    </div>
+                    <div class="digit">
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                    </div>
+                    <div class="digit">
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                    </div>
+                    <div class="digit">
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                    </div>
+                    <div class="digit">
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                    </div>
+                </div>
+                <canvas id="demo-canvas"></canvas>
+            </div>
+        </div>
+    </div>
+    <script src="js/TweenLite.min.js"></script>
+    <script src="js/EasePack.min.js"></script>
+    <script src="js/rAF.js"></script>
+    <script src="js/demo-1.js"></script>
+    <script src='js/Rx.min.js'></script>
+    <script src='js/rxcss.min.js'></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
