--- a/origin.html
+++ b/origin.html
@@ -25,7 +25,7 @@
 </head>
 
 <body data-spy="scroll" data-target="#myScrollspy" class="body">
-    <nav class=" navbar navbar-default navbar-fixed-top" role="navigation">
+    <nav class=" navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0px;">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
