--- a/personalinformation.html
+++ b/personalinformation.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#f4645f">
+    <meta name="theme-color" content="white">
 <!--    <link rel="stylesheet" type="text/css" href="css/normalize.css" />-->
     <link rel="stylesheet"  href="css/style.css">
     <link rel="stylesheet"  href="css/demo.css" />
