--- a/personalinformation.html
+++ b/personalinformation.html
@@ -7,20 +7,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#c4f4ff">
-<!--    <link rel="stylesheet" type="text/css" href="css/normalize.css" />-->
-    <link rel="stylesheet"  href="css/style.css">
-    <link rel="stylesheet"  href="css/demo.css" />
-    <link rel="stylesheet"  href="css/component.css" />
-    <link rel="stylesheet"  href="css/bootstrap.min.css">
-    <link rel="stylesheet"  href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet"  href="css/pages.css">
+    <!--    <link rel="stylesheet" type="text/css" href="css/normalize.css" />-->
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/demo.css" />
+    <link rel="stylesheet" href="css/component.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/pages.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js">
     </script>
 </head>
 
 <body style="padding: 0px;  ">
-     <nav class=" navbar navbar-default navbar-fixed-top" role="navigation" style="margin-bottom: 0px;">
+    <nav class=" navbar navbar-default navbar-fixed-top" role="navigation" style="margin-bottom: 0px;">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
@@ -30,7 +30,7 @@
                 <ul class="nav navbar-nav" role="tablist">
                     <li role="presentation" class="hidden-sm"> <a href="index.html">首页</a> </li>
                     <li role="presentation"> <a href="recommend.html">游戏佳作推荐</a> </li>
-                    <li role="presentation" class="dropdown" > <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                    <li role="presentation" class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" href="#">
 							游戏分发平台 <span class="caret"></span>
 						</a>
                         <ul class="dropdown-menu" role="menu">
@@ -39,7 +39,7 @@
                             <li role="presentation"> <a href="uplay.html">UPlay</a> </li>
                         </ul>
                     </li>
-                    <li role="presentation" class=" active" > <a href="personalinformation.html">添加我为好友</a> </li>
+                    <li role="presentation" class=" active"> <a href="personalinformation.html">添加我为好友</a> </li>
                 </ul>
                 <form class="navbar-form navbar-right " role="search" action="http://store.steampowered.com/search/">
                     <div class="input-group">
@@ -55,48 +55,42 @@
     <!-- Modal -->
     <div style="padding-top: 0px;" class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
-            <div class="modal-content" >
-                <iframe  id="goldendata_form_ndgR4r" src="https://jinshuju.net/f/ndgR4r?background=white&banner=show&embedded=true" width="100%" frameborder=0 allowTransparency="true" height="550pt" scrolling="no">你的浏览器不支持iframe</iframe>
+            <div class="modal-content">
+                <iframe id="goldendata_form_ndgR4r" src="https://jinshuju.net/f/ndgR4r?background=white&banner=show&embedded=true" width="100%" frameborder=0 allowTransparency="true" height="590pt" scrolling="no">你的浏览器不支持iframe</iframe>
             </div>
         </div>
     </div>
     <div class="demo-1" style="width: 100%;height: 100%;padding: 0px;">
-            <div class="information panel panel-default container hidden-sm hidden-xs" style="background-color: rgba(255,255,255,0.3);">
-                <!-- chrome中中文字体显示不是微软雅黑（bug？），ie和eage中背景明显卡顿 -->
-                <div class="panel-heading" style="opacity: 0.5;"> <strong>个人资料：</strong> </div>
-                <div class="panel-body"> 正所谓独乐乐不如众乐乐
-                    <br /> 留下自己的联系方式
-                    <br /> 欢迎有兴趣的朋友来一起探索游戏的世界！
-                    <br /> Steam id：<a href="http://steamcommunity.com/id/chushao/">http://steamcommunity.com/id/chushao/</a> 
-                    WeChat：Q751590330
-                     </div>
-                <!-- Button trigger modal -->
-                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"> 留下联系方式 </button>
-            </div>
-            <div class="informationxs panel panel-default container  hidden-lg hidden-md hidden-sm " style="background-color: rgba(255,255,255,0.3);">
-                <!-- chrome中中文字体显示不是微软雅黑（bug？），ie和eage中背景明显卡顿 -->
-                <div class="panel-heading" style="opacity: 0.5;"> <strong>个人资料：</strong> </div>
-                <div class="panel-body"> 正所谓独乐乐不如众乐乐
-                    <br /> 留下自己的联系方式
-                    <br /> 欢迎有兴趣的朋友来一起探索游戏的世界！
-                    <br /> Steam id：<a href="http://steamcommunity.com/id/chushao/">http://steamcommunity.com/id/chushao/</a> 
-                    WeChat：Q751590330
-                     </div>
-                <!-- Button trigger modal -->
-                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"> 留下联系方式 </button>
-            </div>
-            <div class="informationsm panel panel-default container  hidden-lg hidden-md hidden-xs" style="background-color: rgba(255,255,255,0.3);">
-                <!-- chrome中中文字体显示不是微软雅黑（bug？），ie和eage中背景明显卡顿 -->
-                <div class="panel-heading" style="opacity: 0.5;"> <strong>个人资料：</strong> </div>
-                <div class="panel-body"> 正所谓独乐乐不如众乐乐
-                    <br /> 留下自己的联系方式
-                    <br /> 欢迎有兴趣的朋友来一起探索游戏的世界！
-                    <br /> Steam id：<a href="http://steamcommunity.com/id/chushao/">http://steamcommunity.com/id/chushao/</a> 
-                    WeChat：Q751590330
-                </div>
-                <!-- Button trigger modal -->
-                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"> 留下联系方式 </button>
-            </div>
+        <div class="information panel panel-default container hidden-sm hidden-xs" style="background-color: rgba(255,255,255,0.3);">
+            <!-- chrome中中文字体显示不是微软雅黑（bug？），ie和eage中背景明显卡顿 -->
+            <div class="panel-heading" style="opacity: 0.5;"> <strong>个人资料：</strong> </div>
+            <div class="panel-body"> 正所谓独乐乐不如众乐乐
+                <br /> 留下自己的联系方式
+                <br /> 欢迎有兴趣的朋友来一起探索游戏的世界！
+                <br /> Steam id：<a href="http://steamcommunity.com/id/chushao/">http://steamcommunity.com/id/chushao/</a> WeChat：Q751590330 </div>
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"> 留下联系方式 </button>
+        </div>
+        <div class="informationxs panel panel-default container  hidden-lg hidden-md hidden-sm " style="background-color: rgba(255,255,255,0.3);">
+            <!-- chrome中中文字体显示不是微软雅黑（bug？），ie和eage中背景明显卡顿 -->
+            <div class="panel-heading" style="opacity: 0.5;"> <strong>个人资料：</strong> </div>
+            <div class="panel-body"> 正所谓独乐乐不如众乐乐
+                <br /> 留下自己的联系方式
+                <br /> 欢迎有兴趣的朋友来一起探索游戏的世界！
+                <br /> Steam id：<a href="http://steamcommunity.com/id/chushao/">http://steamcommunity.com/id/chushao/</a> WeChat：Q751590330 </div>
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"> 留下联系方式 </button>
+        </div>
+        <div class="informationsm panel panel-default container  hidden-lg hidden-md hidden-xs" style="background-color: rgba(255,255,255,0.3);">
+            <!-- chrome中中文字体显示不是微软雅黑（bug？），ie和eage中背景明显卡顿 -->
+            <div class="panel-heading" style="opacity: 0.5;"> <strong>个人资料：</strong> </div>
+            <div class="panel-body"> 正所谓独乐乐不如众乐乐
+                <br /> 留下自己的联系方式
+                <br /> 欢迎有兴趣的朋友来一起探索游戏的世界！
+                <br /> Steam id：<a href="http://steamcommunity.com/id/chushao/">http://steamcommunity.com/id/chushao/</a> WeChat：Q751590330 </div>
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"> 留下联系方式 </button>
+        </div>
         <div class="content">
             <div id="large-header" class="large-header">
                 <div style="position:absolute;right:100px; top:300px;" class="time" id="time" data-hours="" data-minutes="">
