更换页面主题
禁用掉了bootstrap2的默认样式

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#c4f4ff">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <!--    <link rel="stylesheet" href="css/bootstrap-theme.min.css">-->
     <link rel="stylesheet" type="text/css" href="css/pages.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -34,7 +34,7 @@
                             <li role="presentation"> <a href="uplay.html">UPlay</a> </li>
                         </ul>
                     </li>
-                    <li role="presentation" > <a href="personalinformation.html">添加我为好友</a> </li>
+                    <li role="presentation"> <a href="personalinformation.html">添加我为好友</a> </li>
                 </ul>
                 <form class="navbar-form navbar-right " role="search" action="http://store.steampowered.com/search/">
                     <div class="input-group">
@@ -78,8 +78,7 @@
                     </div>
                     <div class="item"> <img src="img/slider2.jpg" alt="XBOX one S" width="100%">
                         <div class="carousel-caption">
-                            <h2>微软新主机</h2>
-                        </div>
+                            <h2>微软新主机</h2> </div>
                     </div>
                 </div>
                 <!-- Controls -->
@@ -90,10 +89,9 @@
         <section class="pagegrey">
             <div class="container">
                 <div class="pagediv row">
-                <center>
-                    <h2>三大主流游戏分发平台</h2>
-                </center>
-                <br />
+                    <center>
+                        <h2>三大主流游戏分发平台</h2> </center>
+                    <br />
                     <div class="col-md-4">
                         <center>
                             <h3>Steam</h2></center> <img class="img-responsive center-block" alt="steam logo" src="img/steam.png"></div>
