--- a/origin.html
+++ b/origin.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#c4f4ff">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <!--    <link rel="stylesheet" href="css/bootstrap-theme.min.css">-->
     <link rel="stylesheet" type="text/css" href="css/pages.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js">
@@ -35,7 +35,7 @@
                 <ul class="nav navbar-nav" role="tablist">
                     <li role="presentation" class="hidden-sm"> <a href="index.html">首页</a> </li>
                     <li role="presentation"> <a href="recommend.html">游戏佳作推荐</a> </li>
-                    <li role="presentation" class="dropdown active" > <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                    <li role="presentation" class="dropdown active"> <a class="dropdown-toggle" data-toggle="dropdown" href="#">
 							游戏分发平台 <span class="caret"></span>
 						</a>
                         <ul class="dropdown-menu" role="menu">
@@ -44,7 +44,7 @@
                             <li role="presentation"> <a href="uplay.html">UPlay</a> </li>
                         </ul>
                     </li>
-                    <li role="presentation" > <a href="personalinformation.html">添加我为好友</a> </li>
+                    <li role="presentation"> <a href="personalinformation.html">添加我为好友</a> </li>
                 </ul>
                 <form class="navbar-form navbar-right " role="search" action="http://store.steampowered.com/search/">
                     <div class="input-group">
