--- a/personalinformation.html
+++ b/personalinformation.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/demo.css" />
     <link rel="stylesheet" href="css/component.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <!--    <link rel="stylesheet" href="css/bootstrap-theme.min.css">-->
     <link rel="stylesheet" href="css/pages.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js">
