--- a/uplay.html
+++ b/uplay.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#c4f4ff">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <!--    <link rel="stylesheet" href="css/bootstrap-theme.min.css">-->
     <link rel="stylesheet" type="text/css" href="css/pages.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js">
@@ -25,7 +25,7 @@
 </head>
 
 <body data-spy="scroll" data-target="#myScrollspy" class="body">
-   <nav class=" navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0px;">
+    <nav class=" navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0px;">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
@@ -35,7 +35,7 @@
                 <ul class="nav navbar-nav" role="tablist">
                     <li role="presentation" class="hidden-sm"> <a href="index.html">首页</a> </li>
                     <li role="presentation"> <a href="recommend.html">游戏佳作推荐</a> </li>
-                    <li role="presentation" class="dropdown active" > <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                    <li role="presentation" class="dropdown active"> <a class="dropdown-toggle" data-toggle="dropdown" href="#">
 							游戏分发平台 <span class="caret"></span>
 						</a>
                         <ul class="dropdown-menu" role="menu">
